# CmakePlayground

CMakeProject1/: CMakeLists.txt  CMakePresets.json
